--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 			padding:15px;
 			font-size: 15px;
 		}
+		p {
+			font-family: Verdana, sans-serif;
+		}
 		a:link, a:visited {
 			color:white;
 		}
@@ -63,11 +66,11 @@
 
 	<div class="container-fluid" style="background-image: url('9b95c888-7f9d-44a4-8b74-224f6bd94171a.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:cover;color:#cc0066;padding-left:25px;width:100%;">
 		<img src="IMG_3859(croped).jpg" alt="me" style="float:right;width:190px;height:270px;">
-		<h1 style="font-weight:bold;">Welcome to Ice's Dreamland!</h1>
-		<h3>About me :)</h3>
-		<h4>Hi! My name is Ice. I was born in Hong Kong.</h4>
-		<h4>I am currently in my third year university study in Information Security.</h4>
-		<h4>This page is all about me. Nice to meet you guys. ;)</h4>
+		<h1 style="font-family:Impact, fantasy;">Welcome to Ice's Dreamland!</h1>
+		<h3 style="font-family:Comic Sans MS, Comic Sans, cursive;">About me :)</h3>
+		<h4 style="font-family:Comic Sans MS, Comic Sans, cursive;">Hi! My name is Ice. I was born in Hong Kong.</h4>
+		<h4 style="font-family:Comic Sans MS, Comic Sans, cursive;">I am currently in my third year university study in Information Security.</h4>
+		<h4 style="font-family:Comic Sans MS, Comic Sans, cursive;">This page is all about me. Nice to meet you guys. ;)</h4>
 	</div>
 	
 	<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
@@ -94,24 +97,25 @@
 	
 	<div id="secondary" class="container-fluid">
 		<img src="IMG-20160713-WA0000.jpg" alt="Choir" style="float:right;width:300px;height:200px;">
-		<h1>My Sceondary School Life</h1>
+		<h1 style="font-family:Tahoma, sans-serif;font-weight:bold;">My Secondary School Life</h1>
 		<p>I graduated from my secondary school - <a href="http://www.hfcc.edu.hk/schnet/" target="_blank">Holy Family Canossian College</a>. <- Click here to visit HFCC</p>
 		<p>Actually, I am not quite wish to talk about my secondary school life. I studied Geography and ICT at my senior year. To be honest, I don't know why I choose ICT as my electives (lol). I was clear that I have an interest in Geography. Perhaps, I believes that IT have its worth in the society, indeed attracts me to know more and learn more.</p>
 	</div>
 	<div id="post" class="container-fluid">
-		<h1>Life After Secondary School</h1>
+		<h1 style="font-family:Tahoma, sans-serif;font-weight:bold;">Life After Secondary School</h1>
 		<p>I previously graduated from <a href="https://www.hkcc-polyu.edu.hk/en/home/index.html" target="_blank">Hong Kong Community College</a>. <- Click here to visit HKCC</p>
 		<p>Because of not outstanding results obtained in the HKDSE, my secondary school teachers and students recommend to enter the college to gain the associate degree, in order to get another chance to enter to the university.</p>
-		<p>As a result, I started my associate degree programme at the college. But surprisingly, I chose IT as my major study.</p>
-		<p>Although I don't want to complain much on it, I have to say, there ain't much choice to choose from those subjects I want to study, e.g. Geography.</p>
+		<p>As a result, I started my associate degree programme at the college. But surprisingly, I chose IT as my major study. Although I don't want to complain much on it, I have to say, there ain't much choice to choose from those subjects I want to study, e.g. Geography.</p>
+		<p>After my associate degree study, I was so lucky that I got an offer in Information Security from The Hong Kong Polytechnic University. I finally can able to enjoy my university life. Unfortunately, suffering from COVID-19, I still can't go to school with my friends and attend classes. TAT</p>
 	</div>
 	<div id="musicl" class="container-fluid">
 		<img src="JAC_3317_sized_croped.jpg" alt="band" style="float:left;padding-right:25px;width:110px;height:271px;">
-		<h1>Hobby: Playing Music</h1>
+		<h1 style="font-family:Tahoma, sans-serif;font-weight:bold;">Hobby: Playing Music</h1>
 		<p>I'm a music lover. I always enchants with music.</p>
 		<p>I've participated in several music-related activities. I'm a percussionist since my primary school year. I remembered when I first watched a <a href="https://en.wikipedia.org/wiki/Percussion_instrument" target="_blank">percussion</a> performance, every up-beats and down-beats irritate me a lot.</p>
 		<p>At my secondary school year, I even joined the orchestra in participating in the percussion section.</p>
 		<p>I am also a chorister since my secondary school year. I participated in several inter-school music-related activities, like different competitions and performances. I really like to join these activities.</p>
+		<p>I also love to listen to music at my spare time. I especially like Cantopop and J-pop much.</p>
 	</div>
 
 	<footer class="container-fluid text-center">
