--- a/index.html
+++ b/index.html
@@ -73,26 +73,13 @@
 		<h4 style="font-family:Comic Sans MS, Comic Sans, cursive;">This page is all about me. Nice to meet you guys. ;)</h4>
 	</div>
 	
-	<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>                        
-				</button>
-				<a class="navbar-brand" href="#">TO Wai Sum</a>
-			</div>
-			<div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav">
-						<li><a href="#secondary">Secondary School</a></li>
-						<li><a href="#post">Post-secondary Period</a></li>
-						<li><a href="#musicl">Hobby</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
+	<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197" style="border-radius:0">
+		<ul class="nav navbar-nav">
+			<li class="active"><a href="#">TO Wai Sum</a></li>
+				<li><a href="#secondary">Secondary School</a></li>
+				<li><a href="#post">Post-secondary Period</a></li>
+				<li><a href="#musicl">Hobby</a></li>
+		</ul>
 	</nav>    
 	
 	<div id="secondary" class="container-fluid">
