--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 		.affix ~ .container-fluid {
 			top:50px;
 			position:relative;
-			max-height:75%;
 		}
 		#secondary {
 			padding-top:50px;
@@ -83,7 +82,7 @@
 		</ul>
 	</nav>    
 	
-	<div id="secondary" class="container-fluid">
+	<div id="secondary" class="container-fluid h-75 d-inline-block">
 		<h1 style="font-family:Tahoma, sans-serif;font-weight:bold;">My Secondary School Life</h1>
 		<p>I graduated from my secondary school - <a href="http://www.hfcc.edu.hk/schnet/" target="_blank">Holy Family Canossian College</a>. <- Click here to visit HFCC</p>
 		<p>Actually, I am not quite wish to talk about my secondary school life. I studied Geography and ICT at my senior year. To be honest, I don't know why I choose ICT as my electives (lol). I was clear that I have an interest in Geography. Perhaps, I believes that IT have its worth in the society, indeed attracts me to know more and learn more.</p>
